--- a/css-j2bt6x/view-files.css
+++ b/css-j2bt6x/view-files.css
@@ -80,13 +80,14 @@
 
 .frm {
     width: 100%;
-    height: auto;
+    min-height: 110px;
+    height: 110px;
     display: inline-flex;
     flex-direction: column;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 3em;
-
+    overflow-y: hidden;
 }
 
 .frm img {
