--- a/css-j2bt6x/view-files.css
+++ b/css-j2bt6x/view-files.css
@@ -80,8 +80,7 @@
 
 .frm {
     width: 100%;
-    min-height: 110px;
-    height: 110px;
+    height: auto;
     display: inline-flex;
     flex-direction: column;
     margin-left: auto;
@@ -138,6 +137,10 @@
 .leftHeader h1 {
     margin-top: auto;
     margin-bottom: auto;
+}
+
+.divAppTable {
+    display: none;
 }
 
 .appIconHeader {
