--- a/css-j2bt6x/view-files.css
+++ b/css-j2bt6x/view-files.css
@@ -86,6 +86,11 @@
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 3em;
+    
+    border: 1px solid white;
+    border-radius: 6px;
+    margin-top: 0.5em;
+    background: rgba(0, 0, 0, 0.05);
 }
 
 .frm img {
@@ -105,17 +110,15 @@
     color: #FFFFFF;
 }
 
-
+/*
 .entry {
-
     width: auto;
-    min-height: 60px;
+    /*min-height: 60px;
     height: auto;
-    border: 1px solid white;
-    border-radius: 6px;
-    margin-top: 0.5em;
-    background: rgba(0, 0, 0, 0.05);
+    
 }
+*/
+
 
 .entryHeader {
     display: flex;
@@ -138,9 +141,6 @@
     margin-bottom: auto;
 }
 
-.divAppTable {
-    display: none;
-}
 
 .appIconHeader {
     width: 24px;
