--- a/css-j2bt6x/view-files.css
+++ b/css-j2bt6x/view-files.css
@@ -86,11 +86,10 @@
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 3em;
-    
     border: 1px solid white;
     border-radius: 6px;
-    margin-top: 0.5em;
     background: rgba(0, 0, 0, 0.05);
+    transition: height 1s linear;
 }
 
 .frm img {
@@ -110,16 +109,6 @@
     color: #FFFFFF;
 }
 
-/*
-.entry {
-    width: auto;
-    /*min-height: 60px;
-    height: auto;
-    
-}
-*/
-
-
 .entryHeader {
     display: flex;
     width: 98%;
@@ -129,6 +118,11 @@
     margin-bottom: 1em;
     justify-content: space-between;
 }
+
+.divAppTable {
+    display: none;
+}
+
 
 .leftHeader {
     display: inline-flex;
