--- a/css-j2bt6x/view-files.css
+++ b/css-j2bt6x/view-files.css
@@ -80,7 +80,7 @@
 
 .frm {
     width: 100%;
-    height: auto;
+    height: 60px;
     display: inline-flex;
     flex-direction: column;
     margin-left: auto;
@@ -89,7 +89,18 @@
     border: 1px solid white;
     border-radius: 6px;
     background: rgba(0, 0, 0, 0.05);
-    transition: height 1s linear;
+    animation-name: expand;
+    animation-duration: 1s;
+    
+}
+
+@keyframes expand {
+    0% {
+        height: 60px;
+    }
+    100% {
+        height: auto;
+    }
 }
 
 .frm img {
